# wjecExamPaperProcessor

./: .gitignore  README.md  index.json  main.py  pyproject.toml  test_index.json  test_ocr_mongodb.py  update_index.py
.github/: .copilot-codeGeneration-instructions.md
Index/: README.md  final_index.json  final_index_tagged.json  hierarchical_index.json  index.json  update_index.py
Prompts/: identifyIndexForQuestions.md  metadataCreator.md
docs/: metadata-extraction.md
ocr_results/: 1500U30-1-030619.json  1500U30-1-130622.json  1500U40-1 WJEC GCE A Level Comp Science Unit 4 MS S17 (New).json  1500U40-1 WJEC GCE A Level Computer Science - Unit 4 MS S22.json  2500N20-1 GCE AS Computer Science Unit 2 MS Summer 2016 (New)-w.json  2500U10-1 WJEC AS Comp Science Unit 1 MS S18 (New).json  2500U10-1 WJEC GCE Computer Science - Unit 1 MS S22.json  2500U10-1(050617).json  2500U10-1(060616).json  2500U10-1-170522.json  2500U20-1 GCE AS Computer Science Unit 2 MS Summer 2016 (New)-e.json  2500U20-1 WJEC AS Comp Science Unit 2 MS S18 (New).json  2500U20-1 WJEC GCE AS Comp Science Unit 2 MS S17 (New).json  2500U20-1 WJEC GCE Computer Science - Unit 2 MS S22.json  2500U20-1(090617).json  2500U20-1-240519.json  2500U20-1A-270522.json  s23-2500u10-1-ms.json  s23-2500u10-1.json  s23-2500u20-1-ms.json  s23-2500u20-1a.json
src/: main.py  mistalAPIClient.py  pdfOcrProcessor.py  test_directory_metadata_extraction.py  test_metadata_extraction.py
tests/: conftest.py  test_db_manager.py  test_directory_metadata_extraction.py  test_exam_content_parser.py  test_index_manager.py  (+4 more)
(+205 files in other folders)
